# flightProject

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Client.cpp  Client.h  Command.h  ConnectCommand.cpp  ConnectCommand.h  DataReaderServer.cpp  DataReaderServer.h  Div.cpp  Div.h  EnterIfWhile.cpp  EnterIfWhile.h  Expression.h  ExpressionParser.cpp  ExpressionParser.h  GlobalNewSockfd.cpp  GlobalNewSockfd.h  IfCommand.cpp  IfCommand.h  Interpreter.cpp  Interpreter.h  Maps.cpp  Maps.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Number.cpp  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  Plus.cpp  Plus.h  PrintCommand.cpp  PrintCommand.h  SetCommand.cpp  SetCommand.h  VarCommand.cpp  (+2 more)
